--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="LyAdminBot control panel"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="apple-touch-icon" href="favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>LyAdminBot</title>
   </head>
   <body class="">
     <noscript>You need to enable JavaScript to run this app.</noscript>
